objects/spExams__Configuration__c.object
<CustomObject>
    <description>Sky Exam Configurations Settings</description>
    <fields>
        <fullName>spExams__Background_Color__c</fullName>
        <label>Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__Background_Image__c</fullName>
        <label>Background Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>spExams__Background_Position__c</fullName>
        <label>Background Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Filled</fullName>
                    <default>true</default>
                    <label>Filled</label>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
                <value>
                    <fullName>Actual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>spExams__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__Confirmation_Message__c</fullName>
        <label>Confirmation Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__Disclaimers__c</fullName>
        <label>Disclaimers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>spExams__Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>spExams__Logo_URL__c</fullName>
        <label>Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>spExams__Native_Domain__c</fullName>
        <label>Native Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__No_of_allowed_interruptions__c</fullName>
        <label>No of allowed interruptions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>spExams__Site__c</fullName>
        <label>Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>spExams__Time_between_interruptions__c</fullName>
        <label>Time between interruptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>